--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ h1 {
 
 }
 
-.movie div:nth-of-type(1) {
+/* .movie div:nth-of-type(1) {
   position: absolute;
   padding: 16px;
   width: 100%;
@@ -230,4 +230,4 @@ h1 {
     width: "100%";
     margin: 1rem;
   }
-} 
+}  */
