--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   border: 0;
   box-sizing: border-box;
@@ -128,7 +128,7 @@ h1 {
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 
-}
+} */
 
 /* .movie div:nth-of-type(1) {
   position: absolute;
